--- a/package.json
+++ b/package.json
@@ -602,6 +602,16 @@
                     "sndseq"
                 ],
                 "configuration": "./configurations/basicLanguageConfiguration.json"
+            },
+            {
+                "id": "wad",
+                "aliases": [
+                    "Wad",
+                    "WAD"
+                ],
+                "extensions": [
+                    ".wad"
+                ]
             }
         ],
         "grammars": [
@@ -790,7 +800,76 @@
                 "scopeName": "source.sndseq",
                 "path": "./syntaxes/sndseq.tmLanguage.json"
             }
-        ]
+        ],
+        "commands": [
+            {
+                "command": "wadexplorer.extractFiles",
+                "title": "Extract Files ..."
+            },
+            {
+                "command": "wadexplorer.extractHere",
+                "title": "Extract Here"
+            },
+            {
+                "command": "wadexplorer.extractElement",
+                "title": "Extract Element ..."
+            },
+            {
+                "command": "wadexplorer.exploreWadFile",
+                "title": "Explore Wad File"
+            },
+            {
+                "command": "wadexplorer.clear",
+                "title": "Clear view"
+            },
+            {
+                "command": "openWadResource",
+                "title": "Open WAD Resource"
+            }
+        ],
+        "menus": {
+            "explorer/context": [
+                {
+                    "command": "wadexplorer.extractFiles",
+                    "when": "resourceLangId == wad",
+                    "group": "0_wad@1"
+                },
+                {
+                    "command": "wadexplorer.extractHere",
+                    "when": "resourceLangId == wad",
+                    "group": "0_wad@2"
+                },
+                {
+                    "command": "wadexplorer.exploreWadFile",
+                    "when": "resourceLangId == wad",
+                    "group": "0_wad@3"
+                }
+            ],
+            "view/title": [
+                {
+                    "command": "wadexplorer.clear",
+                    "when": "view == wadExplorer"
+                }
+            ],
+            "view/item/context": [
+                {
+                    "command": "wadexplorer.extractElement",
+                    "when": "view == wadExplorer && viewItem != wad"
+                },
+                {
+                    "command": "wadexplorer.extractFiles",
+                    "when": "view == wadExplorer && viewItem == wad"
+                }
+            ]
+        },
+        "views": {
+            "explorer": [
+                {
+                    "id": "wadExplorer",
+                    "name": "Wad Explorer"
+                }
+            ]
+        }
     },
     "author": {
         "name": "PROPHESSOR",
